fix: 호감 조회 테스트 예외 수정
- 호감 조회 테스트 예외 수정되도록 변경